Bug 98726 - debug build: gtk3 scroll bars background never repainted
Summary: debug build: gtk3 scroll bars background never repainted
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.1.1 rc
Hardware: All Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords:
: 99133 99229 (view as bug list)
Depends on: 98419
Blocks:
  Show dependency treegraph
 
Reported: 2016-03-17 14:04 UTC by Lionel Elie Mamane
Modified: 2016-10-25 19:02 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
annotated screenshot showing the problem (131.83 KB, image/png)
2016-03-17 14:04 UTC, Lionel Elie Mamane
Details
xfce setting: appearance / style (9.34 KB, image/png)
2016-03-17 19:41 UTC, Lionel Elie Mamane
Details
xfce setting: appearance / icons (7.86 KB, image/png)
2016-03-17 19:42 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2016-03-17 14:04:39 UTC
Created attachment 123659 [details]
annotated screenshot showing the problem

+++ This bug was initially created as a clone of Bug #98419 +++

I disabled the "make the background orange" line like suggested in bug 98419 comments 23 and 26.

The orange goes away, but drawing errors remain: the "background" of the scrollbar starts grey or white (depending on which scrollbar it is) but is never repainted after the scrollbar went over it, and stays blue with black streaks; I attach an annotated screenshot, taken after moving the scrollbars a bit.
Comment 1 Lionel Elie Mamane 2016-03-17 14:06:35 UTC
Not that the table control scrollbar was never orange (before removing the line), probably because it is painted *white* (instead of grey) *once*. But it exhibits the same non-repainting problems afterwards anyway.
Comment 2 Lionel Elie Mamane 2016-03-17 14:07:58 UTC
For full clarity, this happens in all windows: Writer, Calc, Draw, ... Also with a fresh blank document, this one is not specific to documents that contain a table control.
Comment 3 Caolán McNamara 2016-03-17 15:25:15 UTC
We know from the earlier bug that the gtk3 version is 3.18.8-1 (Fedora 23 which I have locally here has gtk3-3.18.9-1 which is pretty close)
Comment 4 Caolán McNamara 2016-03-17 16:14:41 UTC
What I can't figure out is what theme that is because it doesn't look like the default adwaita. If I could replicate the theme I'm sure I could resolve this.
Comment 5 Lionel Elie Mamane 2016-03-17 19:41:24 UTC
(In reply to Caolán McNamara from comment #4)
> What I can't figure out is what theme that is because it doesn't look like
> the default adwaita. If I could replicate the theme I'm sure I could resolve
> this.

Do these screenshots from the appearance xfce settings help?
Comment 6 Lionel Elie Mamane 2016-03-17 19:41:56 UTC
Created attachment 123671 [details]
xfce setting: appearance / style
Comment 7 Lionel Elie Mamane 2016-03-17 19:42:16 UTC
Created attachment 123672 [details]
xfce setting: appearance / icons
Comment 8 Caolán McNamara 2016-03-17 20:30:24 UTC
"clearlooks-phenix" perfect that's the ticket. Now I can reproduce this locally
Comment 9 Commit Notification 2016-03-17 20:50:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e511f962c0b70e0ce0d19c42be1f198b6191fad1

Resolves: tdf#98726 sneaky transparent clearlooks-phenix scrollbars

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-03-18 09:53:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1667570b70cf5f2b4a12fe35e445c5d3de82452&h=libreoffice-5-1

Resolves: tdf#98726 sneaky transparent clearlooks-phenix scrollbars

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2016-04-23 11:48:50 UTC
*** Bug 99229 has been marked as a duplicate of this bug. ***
Comment 12 Caolán McNamara 2016-05-06 14:43:08 UTC
*** Bug 99133 has been marked as a duplicate of this bug. ***