Resolves: tdf#98726 sneaky transparent clearlooks-phenix scrollbars

Change-Id: Idc05d7b6c2b42086eafa9ad8ab8e63116d6f676c